--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/oo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>oomi | signal opportunity</title>
+    <title>oomi | searching for signal</title>
   </head>
   <body>
     <div id="root"></div>
